--- a/_posts/elixir/2016-12-31-types.md
+++ b/_posts/elixir/2016-12-31-types.md
@@ -34,12 +34,13 @@ Map, Tuple, Function
 - List
     - `[1, 2, 3]`
     - `[]`
-- Keyword List
+- Keyword
     - `[key: "value"]`
 - Map
     - `%{key: "value"}`
     - `%{3.14 => "π"}`
     - `%{}`
+- Struct
     - `%SomeStruct{key: "value"}`
 - Tuple
     - `{:ok, type}`
@@ -55,3 +56,5 @@ Map, Tuple, Function
     - `fn arg1, arg2 -> :ok end`
     - `&(&1)`
     - `&(&1 + &2)`
+    - `&String.trim/1`
+    - `&String.replace(&1, ~r/\s+/, "")`
