alter 2 posts menutitle

--- a/_posts/elixir/2017-01-05-nlp100-00-09.md
+++ b/_posts/elixir/2017-01-05-nlp100-00-09.md
@@ -1,7 +1,7 @@
 ---
 layout:        post
 title:         "言語処理100本ノック（第1章）"
-menutitle:     "言語処理100本ノック（第1章）"
+menutitle:     "言語処理100本ノック in Elixir（第1章）"
 date:          2017-01-05
 tags:          Programming Language Elixir
 category:      Elixir
