--- a/_posts/elixir/2017-01-09-nlp100-10-19.md
+++ b/_posts/elixir/2017-01-09-nlp100-10-19.md
@@ -1,7 +1,7 @@
 ---
 layout:        post
 title:         "言語処理100本ノック（第2章）"
-menutitle:     "言語処理100本ノック（第2章）"
+menutitle:     "言語処理100本ノック in Elixir（第2章）"
 date:          2017-01-09
 tags:          Programming Language Elixir
 category:      Elixir
