--- a/_posts/blog/2016-01-01-Features.md
+++ b/_posts/blog/2016-01-01-Features.md
@@ -16,31 +16,31 @@ The features described in this section are specific for this template. All other
 Keep in mind that paralax effect will not be captured if you like to print the page.
 
 ```html
-<div class="bg-scroll" style="background-image: url('{{ site.github.url }}/media/img/mountain1.jpg')"></div>
+<div class="bg-scroll" style="background-image: url('{{ site.baseurl }}/media/img/mountain1.jpg')"></div>
 ```
 
-<div class="bg-scroll" style="background-image: url('{{ site.github.url }}/media/img/mountain1.jpg')"></div>
+<div class="bg-scroll" style="background-image: url('{{ site.baseurl }}/media/img/mountain1.jpg')"></div>
 
 
 #### Caption for Image
 
 ```html
 <figure>
-   <img src="{{ site.github.url }}/media/img/mountain2.jpg" />
+   <img src="{{ site.baseurl }}/media/img/mountain2.jpg" />
    <figcaption>A nice mountain.</figcaption>
 </figure>
 ```
 
 <figure>
-<img src="{{ site.github.url }}/media/img/mountain2.jpg" />
+<img src="{{ site.baseurl }}/media/img/mountain2.jpg" />
 <figcaption>A nice mountain</figcaption>
 </figure>
 
 #### Image Allignment
 
 ```html
-![]({{ site.github.url }}/media/img/mountain3.gif#right)
-![]({{ site.github.url }}/media/img/mountain2.gif#left)
+![]({{ site.baseurl }}/media/img/mountain3.gif#right)
+![]({{ site.baseurl }}/media/img/mountain2.gif#left)
 ```
 
 Allignment with caption
@@ -48,19 +48,19 @@ Allignment with caption
 ```html
 <aside>
    <figure class="left">
-      <img src="{{ site.github.url }}/media/img/mountain3.jpg#left" />
+      <img src="{{ site.baseurl }}/media/img/mountain3.jpg#left" />
       <figcaption>What a view!</figcaption>
    </figure>
 </aside>
 ```
 
-![]({{ site.github.url }}/media/img/mountain2.jpg#right)
+![]({{ site.baseurl }}/media/img/mountain2.jpg#right)
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent accumsan ante nulla, quis pulvinar nibh tempus sed. In congue congue odio, vel ornare mauris ultrices vel. Vestibulum tristique eros at enim vulputate fringilla. Nullam non augue sit amet elit interdum tempus non ut justo.
 
 <aside>
 <figure class="left">
-<img src="{{ site.github.url }}/media/img/mountain3.jpg" />
+<img src="{{ site.baseurl }}/media/img/mountain3.jpg" />
 <figcaption>What a view!</figcaption>
 </figure>
 </aside>
@@ -72,7 +72,7 @@ Phasellus ut ipsum id leo sagittis pretium a quis neque. Maecenas rutrum lectus 
 
 ```html
 <div class="large">
-   ![]({{ site.github.url }}/media/img/mountain2.jpg)
+   ![]({{ site.baseurl }}/media/img/mountain2.jpg)
 </div>
 ```
 
@@ -80,13 +80,13 @@ With caption
 
 ```html
 <figure class="large" markdown="1">   
-   ![]({{ site.github.url }}/media/img/mountain2.jpg)
+   ![]({{ site.baseurl }}/media/img/mountain2.jpg)
    <figcaption>On top of the mountain!</figcaption>
 </figure>
 ```
 
 <figure class="large" markdown="1">
-   ![]({{ site.github.url }}/media/img/mountain2.jpg)
+   ![]({{ site.baseurl }}/media/img/mountain2.jpg)
    <figcaption>On top of the mountain!</figcaption>
 </figure>
 
@@ -94,12 +94,12 @@ With caption
 
 ```html
 <div class="album">
-   ![]({{ site.github.url }}/media/img/Screenshot_2016-04-09-19-16-28.png)
-   ![]({{ site.github.url }}/media/img/Screenshot_2016-04-02-00-48-25.png)
-   ![]({{ site.github.url }}/media/img/Screenshot_2016-04-01-12-03-36.png)
-   ![]({{ site.github.url }}/media/img/Screenshot_2016-04-01-12-01-33.png)
-   ![]({{ site.github.url }}/media/img/Screenshot_2016-03-24-12-13-58.png)
-   ![]({{ site.github.url }}/media/img/Screenshot_2016-03-17-22-50-05.png)
+   ![]({{ site.baseurl }}/media/img/Screenshot_2016-04-09-19-16-28.png)
+   ![]({{ site.baseurl }}/media/img/Screenshot_2016-04-02-00-48-25.png)
+   ![]({{ site.baseurl }}/media/img/Screenshot_2016-04-01-12-03-36.png)
+   ![]({{ site.baseurl }}/media/img/Screenshot_2016-04-01-12-01-33.png)
+   ![]({{ site.baseurl }}/media/img/Screenshot_2016-03-24-12-13-58.png)
+   ![]({{ site.baseurl }}/media/img/Screenshot_2016-03-17-22-50-05.png)
 </div>
 ```
 
@@ -109,11 +109,11 @@ With caption
 <div class="album">
    // ...
    <figure>
-      <img src="{{ site.github.url }}/media/img/mountain2.jpg" />
+      <img src="{{ site.baseurl }}/media/img/mountain2.jpg" />
       <figcaption>On top of the mountain!</figcaption>
    </figure>
    <figure>
-      <img src="{{ site.github.url }}/media/img/mountain3.jpg" />
+      <img src="{{ site.baseurl }}/media/img/mountain3.jpg" />
       <figcaption>What a view</figcaption>
    </figure>
 </div>
@@ -121,15 +121,15 @@ With caption
 
 <div class="album">
    <figure>
-      <img src="{{ site.github.url }}/media/img/mountain1.jpg" />
+      <img src="{{ site.baseurl }}/media/img/mountain1.jpg" />
       <figcaption>Mountain and lake</figcaption>
    </figure>   
    <figure>
-      <img src="{{ site.github.url }}/media/img/mountain2.jpg" />
+      <img src="{{ site.baseurl }}/media/img/mountain2.jpg" />
       <figcaption>On top of the mountain!</figcaption>
    </figure>   
    <figure>
-      <img src="{{ site.github.url }}/media/img/mountain3.jpg" />
+      <img src="{{ site.baseurl }}/media/img/mountain3.jpg" />
       <figcaption>What a view</figcaption>
    </figure>
 </div>
@@ -192,11 +192,11 @@ Chemicals including paint and thinners must be stored in labelled containers tha
 
 ### 404 Page
 
-The 404 page has a fuzzy search implemented that lists urls that are similar to the entered url. Try it out: [Unknown URL]({{ site.github.url }}/features)
+The 404 page has a fuzzy search implemented that lists urls that are similar to the entered url. Try it out: [Unknown URL]({{ site.baseurl }}/features)
 
 ### JSON API
 
-The theme offers a JSON API for the blog posts. You can query all blog posts via: [`/api/posts.json`]({{ site.github.url }}/api/posts.json)
+The theme offers a JSON API for the blog posts. You can query all blog posts via: [`/api/posts.json`]({{ site.baseurl }}/api/posts.json)
 
 ### PDF and PowerPoint integration
 
