--- a/_posts/misc/2018-08-19-seccamp2018.md
+++ b/_posts/misc/2018-08-19-seccamp2018.md
@@ -197,7 +197,7 @@ Day3 のスケジュールは下の通りです。
 
 #### 1. TLS 1.3/暗号ゼミ
 
-ただひたすらにデバッグしてました。現状ではオレオレ証明書をCertificateメッセージで送るところはできたけど、CertificateVerifyで失敗するので、先生に聞いて見たら古い署名のアルゴリズムを使ってエラーになっているとのことだったので、別の署名に変えたところ、その部分のエラーはなくなりました。
+ただひたすらにデバッグしてました。現状ではオレオレ証明書をCertificateメッセージで送るところはできたけど、CertificateVerifyで失敗するので、先生に聞いてみたら古い署名のアルゴリズムを使ってエラーになっているとのことだったので、別の署名に変えたところ、その部分のエラーはなくなりました。
 
 次のエラーはMACエラー（これがこのゼミの中で一番厄介な問題だった）で、MACを計算するまでの全てのフローを見直してopensslやRFCと間違いがないか、確認する作業が続きました。
 
@@ -209,7 +209,7 @@ Day3 のスケジュールは下の通りです。
 - sequence number がインクリメントされるタイミング（クライアントとサーバが別々で値を持っているのか否か）
 - 複数のメッセージ（例えば ChangeCipherSpec + Finished）が同時に送られてくるときに対応しないといけない点
 
-sequence number がインクリメントされることはRFCには書いてあるのですが、ハンドシェイク時にはクライアントとサーバが別々の番号を持っていて、ハンドシェイクが終了すると seq_number = 0 にして、今度はクライアントとサーバが共通の番号を持つようになるあたりは、RFCに書かれていないので、まぁ大変でしたよデバッグが。
+sequence number がインクリメントされることはRFCには書いてあるのですが、ハンドシェイク時にはクライアントとサーバが別々の番号を持っていて、ハンドシェイクが終了すると seq_number = 0 にして、<del>今度はクライアントとサーバが共通の番号を持つようになるあたりは</del>、RFCに書かれていないので、まぁ大変でしたよデバッグが。（2018/8/21訂正：共通の番号ではなく、ハンドシェイク後も別々の番号を使っていることを確認しました。ここに訂正します。）
 
 お昼の時にチューターの [@lcst_topevx](https://twitter.com/lcst_topevx) さんに TLS1.3 について説明する機会があって、振り返ってみると全体発表するための自分の考えを整理する機会になったので、話を聞いてくださって感謝という気持ちです。ておくれ談義も見ていて面白かったです（笑）
 
