--- a/_posts/misc/2018-08-19-seccamp2018.md
+++ b/_posts/misc/2018-08-19-seccamp2018.md
@@ -4,7 +4,7 @@ title:         "seccamp2018全国大会に参加"
 menutitle:     "seccamp2018全国大会に参加しました"
 date:          2018-08-19
 tags:          seccamp2018
-category:      misc
+category:      Misc
 author:        tex2e
 cover:         /assets/cover1.jpg
 redirect_from:
