--- a/_posts/misc/2018-09-06-k-sec-2018-in-oyama.md
+++ b/_posts/misc/2018-09-06-k-sec-2018-in-oyama.md
@@ -4,7 +4,7 @@ title:         "K-SEC 2018 in 小山高専"
 menutitle:     "K-SEC 2018 in 小山高専の参加記"
 date:          2018-09-06
 tags:          k-sec
-category:      misc
+category:      Misc
 author:        tex2e
 cover:         /assets/cover1.jpg
 redirect_from:
