--- a/_posts/tex/2019-02-13-lifegame.md
+++ b/_posts/tex/2019-02-13-lifegame.md
@@ -3,7 +3,7 @@ layout:        post
 title:         "LaTeXプログラミングでライフゲームを作る"
 menutitle:     "LaTeXプログラミングでライフゲームを作る"
 date:          2019-02-13
-tags:          LaTeX
+tags:          Programming LaTeX
 category:      LaTeX
 author:        tex2e
 cover:         /assets/cover8.jpg
