--- a/media/post/tikz/img/chacha20poly1305/chacha20-double-round.tex
+++ b/media/post/tikz/img/chacha20poly1305/chacha20-double-round.tex
@@ -57,7 +57,7 @@
       \node at (0,-2.3) [above] {奇数ラウンド};
       \node at (5,-1.3) {$\vdots$};
       \node at (5,-2.3) [above] {偶数ラウンド};
-      \draw (-1,-2.3) to[bend right=10] node[below] {ダブルラウンド} (6,-2.3);
+      % \draw (-1,-2.3) to[bend right=10] node[below] {ダブルラウンド} (6,-2.3);
     \end{scope}
 
   \end{tikzpicture}
