--- a/media/post/tikz/chacha20poly1305/chacha20poly1305-dec.tex
+++ b/media/post/tikz/chacha20poly1305/chacha20poly1305-dec.tex
@@ -37,7 +37,7 @@
 
     \node at (+0.9,2.5) (Nonce) {Nonce};
     \node at (-0.2,2.5) (Key) {鍵$K$};
-    \node at (-2.0,2.5) (AAD) {AAD};
+    \node at (-1.5,2.5) (AAD) {AAD};
 
     \draw (Nonce) -- ++(0,-1.0) node[DOT] (Nonce_adj) {};
     \draw (Key)   -- ++(0,-0.7) node[DOT] (Key_adj) {};
@@ -62,10 +62,10 @@
     \draw[->] (ChaCha1.south) -- (ChaCha1.south|-Keystream.north);
     \draw[->] (ChaChan.south) -- (ChaChan.south|-Keystream.north);
 
-    \node[right=of Keystream, XOR] (XOR) {};
+    \node[right=1.2cm of Keystream, XOR] (XOR) {};
     \coordinate[above=0.3cm of XOR, inner sep=0] (XOR_adj) {};
     \node at (Nonce-|XOR) (Plaintext_adj) {};
-    \node[right=0.00cm of Plaintext_adj] (Ciphertext) {暗号文$C$};
+    \node[left=-0.4 of Plaintext_adj] (Ciphertext) {暗号文$C$};
 
     \draw[-] (Ciphertext.south) |- node[DOT] (XOR_adj2) {} (XOR_adj);
     \draw[->] (XOR_adj) -- (XOR);
