up post, find-exec

--- a/_posts/shell/2017-06-11-find-exec.md
+++ b/_posts/shell/2017-06-11-find-exec.md
@@ -12,41 +12,49 @@ comments:      true
 published:     true
 ---
 
-例えば、カレントディレクトリ以下にあるテキストファイルの中身を全て小文字にするコマンドを書きたいとする。
-愚直に書けば次のようなワンライナーになるが、これでは動かない。
+find -exec の中でパイプを使って複数コマンドを実行する方法について説明します。
 
-``` command
-# x 動かない例
+ここでは、カレントディレクトリ以下にあるファイルの中身を全て小文字にするコマンドを書くことを例に説明していきます。
+一つのファイルだけであれば、次のコマンドでできます。
+
+```bash
+cat input.txt | tr 'A-Z' 'a-z' > input.txt.lower
+```
+
+これをそのまま、find -exec で実行しようとしても上手く動きません。
+
+```bash
+# 動かない例
 find . -type f -name '*.txt' -exec cat {} | tr 'A-Z' 'a-z' > {}.lower \;
 ```
 
--exec の後ろには1つのコマンドしか取れないからだ。
-代わりに、`sh -c "実行したいコマンド"` と書くことで複数のコマンドを一つのコマンドにまとめることで動くようになる。
+原因は -exec の後ろには1つのコマンドしか取れないからです。
+代わりに、`sh -c "実行したいコマンド"` と書くことで複数のコマンドを一つのコマンドにまとめることで動くようになります。
 
-``` command
+```bash
 find . -type f -name '*.txt' -exec sh -c "cat {} | tr 'A-Z' 'a-z' > {}.lower" \;
 ```
 
 ワンライナー以外の回答
 -------------------
 
-もしシェルスクリプトを書いているなら、あえてワンライナーにする必要はない。
-複数のコマンドを一つのコマンドにまとめるという点で関数を使うアプローチがある。
+もしシェルスクリプトを書いているなら、あえてワンライナーにする必要はないと思います。
+複数のコマンドを一つのコマンドにまとめるという点で関数を使う方法があります。
 
-``` command
-tolower() { cat "$1" | tr 'A-Z' 'a-z' > "$1".lower }
+```bash
+tolower() {
+    cat "$1" | tr 'A-Z' 'a-z' > "$1".lower
+}
 find . -type f -name '*.txt' -exec tolower {} \;
 ```
 
-その他にあえて挙げるとすれば、`-exec` を使わないで `for-in` を使う方法がある。
-個人的には、この書き方が一番可読性が高いと思っているので、
-ワンライナーではないときは積極的に `for-in` を使うようにしている。
+その他に挙げるとすれば、`-exec` を使わないで `for-in` を使う方法もあります。
+個人的には、この書き方が一番可読性が高いと思います。
 
-``` command
-for textfile in $(find . -type f -name '*.txt'); do
-    cat "$textfile" | tr 'A-Z' 'a-z' > "$textfile".lower
+```bash
+for file in $(find . -type f -name '*.txt'); do
+    cat "$file" | tr 'A-Z' 'a-z' > "$file".lower
 done
 ```
 
-P.S. `for-in` 文の集合をとる方（第二引数）は空白区切でないといけない印象があるが、
-改行も立派な空白の一種であるため、上のような書き方ができる。
+以上です。
