--- a/_posts/shell/2018-08-22-send-mail.md
+++ b/_posts/shell/2018-08-22-send-mail.md
@@ -21,7 +21,7 @@ published:     true
 MTA はメールの配信や転送を行うプログラムのことですが、単にコマンドからメールを送るだけなら、MUA である mail コマンドで事足りるでしょう。
 メールは次のようにして送ることができます。
 
-```
+```command
 echo "this is a test" | mail -s "title" your@email.address
 ```
 
