show draft posts in /blog/draft

--- a/_posts/blog/2016-01-01-Content.md
+++ b/_posts/blog/2016-01-01-Content.md
@@ -1,11 +1,12 @@
 ---
 layout:    post
 title:     "This post demonstrates post content styles"
-menutitle: "Content styles"
+menutitle: "JekyllDecent : Content styles"
 category:  Blog
 author:    tex2e
 tags:      Jekyll Content Demo
-published: false
+sitemap:   false
+draft:     true
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce bibendum neque eget nunc mattis eu sollicitudin enim tincidunt. Vestibulum lacus tortor, ultricies id dignissim ac, bibendum in velit.
