--- a/_posts/blog/2016-01-01-Features.md
+++ b/_posts/blog/2016-01-01-Features.md
@@ -1,10 +1,12 @@
 ---
 layout:    post
 title:     "Theme Features"
+menutitle: "JekyllDecent : Theme Features"
 date:      2016-06-07 13:10:00 +0300
 tags:      Jekyll Theme GitHub Installation
 category:  Blog
-published: false
+sitemap:   false
+draft:     true
 ---
 The features described in this section are specific for this template. All other language features can be found in the [kramdown documentation](http://kramdown.gettalong.org/syntax.html).
 
@@ -79,7 +81,7 @@ Phasellus ut ipsum id leo sagittis pretium a quis neque. Maecenas rutrum lectus 
 With caption
 
 ```html
-<figure class="large" markdown="1">   
+<figure class="large" markdown="1">
    ![]({{ site.baseurl }}/media/img/mountain2.jpg)
    <figcaption>On top of the mountain!</figcaption>
 </figure>
@@ -123,11 +125,11 @@ With caption
    <figure>
       <img src="{{ site.baseurl }}/media/img/mountain1.jpg" />
       <figcaption>Mountain and lake</figcaption>
-   </figure>   
+   </figure>
    <figure>
       <img src="{{ site.baseurl }}/media/img/mountain2.jpg" />
       <figcaption>On top of the mountain!</figcaption>
-   </figure>   
+   </figure>
    <figure>
       <img src="{{ site.baseurl }}/media/img/mountain3.jpg" />
       <figcaption>What a view</figcaption>
