--- a/_posts/blog/2016-01-01-Readme.md
+++ b/_posts/blog/2016-01-01-Readme.md
@@ -1,10 +1,12 @@
 ---
 layout:    post
 title:     "Theme Installation and Usage"
+menutitle: "JekyllDecent : Theme Installation and Usage"
 date:      2016-06-08 18:25:00 +0300
 tags:      Jekyll Theme GitHub Installation
 category:  Blog
-published: false
+sitemap:   false
+draft:     true
 ---
 
 This is a blog template for a static site generator named [Jekyll](https://jekyllrb.com/docs/home/) based on a [Ghost](https://ghost.org) template named [Decent](https://github.com/serenader2014/decent).
@@ -16,22 +18,22 @@ If you like to see the theme in production have a look at [jwillmer.de](http://j
 <div class="album">
 
 <figure>
-<img src="{{ site.github.url }}/media/img/2016-06-08-Readme-front-page-previewe.jpg" />
+<img src="{{ site.baseurl }}/media/img/2016-06-08-Readme-front-page-previewe.jpg" />
 <figcaption>Frontpage</figcaption>
 </figure>
 
 <figure>
-<img src="{{ site.github.url }}/media/img/2016-06-08-Readme-post-preview.jpg" />
+<img src="{{ site.baseurl }}/media/img/2016-06-08-Readme-post-preview.jpg" />
 <figcaption>Post</figcaption>
 </figure>
 
 <figure>
-<img src="{{ site.github.url }}/media/img/2016-06-08-Readme-content-preview.jpg" />
+<img src="{{ site.baseurl }}/media/img/2016-06-08-Readme-content-preview.jpg" />
 <figcaption>Demo</figcaption>
 </figure>
 
 <figure>
-<img src="{{ site.github.url }}/media/img/2016-06-08-Readme-about-preview.jpg" />
+<img src="{{ site.baseurl }}/media/img/2016-06-08-Readme-about-preview.jpg" />
 <figcaption>About Page</figcaption>
 </figure>
 
@@ -105,4 +107,4 @@ The theme is released under **[The MIT License (MIT)](https://github.com/jwillme
     AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
     LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-    SOFTWARE.    
+    SOFTWARE.
