--- a/_posts/misc/2019-08-18-seccamp2019.md
+++ b/_posts/misc/2019-08-18-seccamp2019.md
@@ -208,5 +208,6 @@ Day5 : 8:30〜15:00(16:00)
 - 夕食の休憩時間に部屋の出口付近にSuicaなどのカードを挿して十分に部屋を冷やしておく
 - 寝るときは空調を切ってタオルケットみたいなものだけで寝る
 - 11:00過ぎたら寝て、遅くとも7:00までには起きるようにする
+- 自宅から持ってきたタオルを枕に巻くと気持ちよく眠れる
 - 荷物は帰りに増えるので、キャリーバッグ推奨
 -->
