--- a/_posts/misc/2019-08-18-seccamp2019.md
+++ b/_posts/misc/2019-08-18-seccamp2019.md
@@ -210,4 +210,7 @@ Day5 : 8:30〜15:00(16:00)
 - 11:00過ぎたら寝て、遅くとも7:00までには起きるようにする
 - 自宅から持ってきたタオルを枕に巻くと気持ちよく眠れる
 - 荷物は帰りに増えるので、キャリーバッグ推奨
+
+宿泊室のご案内｜研修施設「セミナーハウス クロス・ウェーブ府中」東京都内
+https://x-wave.orix.co.jp/fuchu/room/
 -->
