--- a/_posts/crypto/2019-05-17-chacha20poly1305.md
+++ b/_posts/crypto/2019-05-17-chacha20poly1305.md
@@ -83,10 +83,10 @@ $$
 
 $$
 \begin{align}
-\mathrm{counst}_0 &= \text{0x61707865} \\
-\mathrm{counst}_1 &= \text{0x3320646e} \\
-\mathrm{counst}_2 &= \text{0x79622d32} \\
-\mathrm{counst}_3 &= \text{0x6b206574} \\
+\mathrm{const}_0 &= \text{0x61707865} \\
+\mathrm{const}_1 &= \text{0x3320646e} \\
+\mathrm{const}_2 &= \text{0x79622d32} \\
+\mathrm{const}_3 &= \text{0x6b206574} \\
 \end{align}
 $$
 
@@ -103,14 +103,14 @@ a += b; d ^= a; d <<<= 8;
 c += d; b ^= c; b <<<= 7;
 ```
 
-図にすると次のようになります。⊞ は $2^{32}$ を法とする加算、⊕ は XOR、`<<< n` は n-bit 左ローテーションを表しています。
+図にすると次のようになります。⊞ は $2^{32}$ を法とする加算、⊕ は XOR、`<<< n` は n-bit 左巡回シフトを表しています。
 
 <figure>
 <img src="{{ site.baseurl }}/media/post/tikz/chacha20poly1305/chacha20-quarter-round.png" width="250px" />
 <figcaption>ChaCha の QuarterRound 関数の処理</figcaption>
 </figure>
 
-QuarterRound関数の内部では、加算、XOR、ローテーションのみを用いるのでタイミング攻撃への耐性が高くなります。
+QuarterRound関数の内部では、加算、XOR、巡回シフトのみを用いるのでタイミング攻撃への耐性が高くなります。
 
 QuarterRound関数は直訳すると1/4ラウンド関数となりますが、この1/4ラウンド関数を4回行うことで1ラウンドの処理を行います。
 なお、ラウンドは「奇数ラウンド」と「偶数ラウンド」に分けられ、それぞれ「列ラウンド」と「対角ラウンド」と呼ばれるラウンドの処理を行います。
