--- a/_posts/misc/2019-08-18-seccamp2019.md
+++ b/_posts/misc/2019-08-18-seccamp2019.md
@@ -214,3 +214,5 @@ Day5 : 8:30〜15:00(16:00)
 宿泊室のご案内｜研修施設「セミナーハウス クロス・ウェーブ府中」東京都内
 https://x-wave.orix.co.jp/fuchu/room/
 -->
+
+- Prev: [seccamp2018全国大会に参加]({{ site.baseurl }}/misc/seccamp2018)
