--- a/_posts/misc/2019-08-18-seccamp2019.md
+++ b/_posts/misc/2019-08-18-seccamp2019.md
@@ -27,7 +27,7 @@ published:     true
 
 ### チュータ募集
 
-参加者の応募課題の提出期限の近くになると、チュータの募集がセキュリティ・キャンプのSlackのほうで告知されました。
+参加者の応募課題の提出期限が近くになると、チュータの募集がセキュリティ・キャンプのSlackのほうで告知されました。
 実装が大好きな私は、2018の集中開発コース X-II 「TLS 1.3/暗号ゼミ」に参加したので、同じ X-II のゼミ名が変わって「暗号化通信ゼミ」を第一希望にして提出しました。
 フォームの内容は次の質問に答えるというものでした。
 
