--- a/_posts/crypto/2020-02-17-crt.md
+++ b/_posts/crypto/2020-02-17-crt.md
@@ -28,6 +28,12 @@ published:     true
     \end{align}
     $$
 
+    唯一の解 $x$ は、$1 \le i \le k$ について $$b_i = N / n_i, \; b_i' = b_i^{-1} \pmod{n_i}$$ とおくと、次の式で求めることができる。
+
+    $$x = \sum_{i=1}^k a_i b_i b'_i \pmod{N}$$
+
+
+
 中国人剰余定理で連立合同方程式 $x \equiv a_i \pmod{n_i} \;\;\text{for}\; i = 1,...,k$ を解くためのアルゴリズムは以下の通りです。
 
 - **アルゴリズム**
