--- a/_posts/misc/2020-03-08-kosen-AE.md
+++ b/_posts/misc/2020-03-08-kosen-AE.md
@@ -36,7 +36,7 @@ published:     true
 
 長期インターンシップが終わるのが、専攻科1年の1月ごろです。そして3月になったら、専攻科の半数以上は就職活動を開始します (大学にいく人は大学院入試になります)。人によっては、インターンに行ったところに就職することが4月の時点で決まっていたりしますが、大体は5月か6月くらいまでに決まります。高専で勉強した専門分野を活かせる場所であれば求人も多いので、就職は苦労はしないと思います (2,3社やれば十分)。都会で就職するのか、はたまた地元で就職するのか、自分のやりたいことは何なのか、自分のスキルセットは何か、今まで何をやってきたから会社にどう貢献できるのか、などを自問自答しながら就活していました。専攻科2年生は特別研究の時間が増える分、授業科目数が少なくなるので、上手く空いている時間を使いながら会社に面接しにいくという感じです。
 
-私は結局、長期インターンの実習先の会社（分類的には大企業になるらしい）に就職することになりました。新卒一括採用を止めて通年採用に切り替えた影響かは分かりませんが、他の会社とは少し違うな、という印象を感じる部分はありました。
+私は結局、長期インターンの実習先の会社に就職することになりました。新卒一括採用を止めて通年採用に切り替えた影響かは分かりませんが、他の会社とは少し違うな、という印象を感じる部分はありました。
 
 個人的な反省としては、資格の勉強を早くしていればよかったのかな、と思っています。少なくとも専攻科1年の3月くらいに企業に送る書類に、資格のことを書けることを目指して、そこから逆算して資格とる必要があると思います。
 
@@ -53,7 +53,9 @@ published:     true
 
 野心的なテーマを提案した私に対して、失敗したときのことも考えて手ごろなテーマを用意したり、自分一人では思いつかなかった部分をお話しする中で提案してくださるなど、(ある部分は放任主義的でしたが) 安心して研究できる環境を用意してくれた指導教員には、とても感謝しています。
 
-特別研究論文を書き終え、2月の前半に学位授与機構に必要な全ての書類を Web 上で提出し、問題がなければ、3月の前半の時点で学位記が学位授与機構から学校に送られてきます。学位記を受け取ったら無事修了です！
+特別研究論文を書き終え、2月の前半に学位授与機構に必要な全ての書類[^niad]を Web 上で提出し、問題がなければ、3月の前半の時点で学位記が学位授与機構から学校に送られてきます。学位記を受け取ったら無事修了です！
+
+[^niad]: [円滑な学位の審査と授与 \| 学位の授与 \| 独立行政法人 大学改革支援・学位授与機構](https://www.niad.ac.jp/n_gakui/other/enkatsu/)
 
 ### メリット・デメリット
 
