mathjax to katex: crypto/*.md

--- a/_posts/crypto/2019-05-17-chacha20poly1305.md
+++ b/_posts/crypto/2019-05-17-chacha20poly1305.md
@@ -8,6 +8,7 @@ cover:         /assets/cover4.jpg
 redirect_from:
 comments:      true
 published:     true
+latex:         true
 ---
 
 ChaCha20-Poly1305というAEAD暗号について、内部のアルゴリズムやPythonによる実装などを説明していきたいと思います。
@@ -80,12 +81,12 @@ $$
 ただし、const の部分はマジックナンバーで、次の定数値を使います[^chacha_state_magic_number]。
 
 $$
-\begin{align}
+\begin{aligned}
 \mathrm{const}_0 &= \text{0x61707865} \\
 \mathrm{const}_1 &= \text{0x3320646e} \\
 \mathrm{const}_2 &= \text{0x79622d32} \\
 \mathrm{const}_3 &= \text{0x6b206574} \\
-\end{align}
+\end{aligned}
 $$
 
 #### Quarter Round
@@ -153,15 +154,15 @@ Poly1305 の入力と出力はそれぞれ以下の通りです。
 
 Poly1305 は名前にもなっているように、多項式 (Polynomial) を使って認証タグを計算して求めます（つまり $T = f(r)$ となります）。Poly1305 の多項式 $f(r)$ は次の形式になっています。
 ただし、各係数 $c'_i$ は、もとのバイト列 $c_i$ にバイト列 0x01 を加えたものです。
-また、Poly1305関数の入出力はバイト列でしたが、内部では数学的な計算を行うので、それぞれの要素（$c'_i, r, s$）は、$\text{le_bytes_to_num}$ 関数によってバイト列から整数に変換されています。
+また、Poly1305関数の入出力はバイト列でしたが、内部では数学的な計算を行うので、それぞれの要素（$c'_i, r, s$）は、le_bytes_to_num 関数によってバイト列から整数に変換されています。
 
 $$
-\begin{align}
-  c_i &\leftarrow \text{le_bytes_to_num}(c_i \;||\; 01) \\
-  r &\leftarrow \text{le_bytes_to_num}(r) \\
+\begin{aligned}
+  c_i &\leftarrow \text{le\_bytes\_to\_num}(c_i \;||\; 01) \\
+  r &\leftarrow \text{le\_bytes\_to\_num}(r) \\
   r &\leftarrow \text{clamp}(r) \\
-  s &\leftarrow \text{le_bytes_to_num}(s)
-\end{align}
+  s &\leftarrow \text{le\_bytes\_to\_num}(s)
+\end{aligned}
 $$
 
 $$
@@ -176,8 +177,8 @@ $$
 
 次に、認証タグの計算で使われる関数の説明をします。
 
-- $\text{le_bytes_to_num}$ 関数は、リトルエンディアン（左側から小さい桁を表す形式）のバイト列を整数に変換する関数です。
-$\text{le_bytes_to_num}$ 関数の簡単な動作例を Python で書き表すと次のようになります。
+- le_bytes_to_num 関数は、リトルエンディアン（左側から小さい桁を表す形式）のバイト列を整数に変換する関数です。
+le_bytes_to_num 関数の簡単な動作例を Python で書き表すと次のようになります。
     ```python
     le_bytes_to_num(b'\x01\x00')  # => 1
     le_bytes_to_num(b'\x00\x01')  # => 256
