--- a/_posts/crypto/2020-02-17-crt.md
+++ b/_posts/crypto/2020-02-17-crt.md
@@ -7,6 +7,7 @@ cover:         /assets/cover4.jpg
 redirect_from:
 comments:      true
 published:     true
+latex:         true
 # sitemap: false
 # draft:   true
 ---
@@ -20,12 +21,12 @@ published:     true
     $k$ 個の整数 $n_1, n_2, ..., n_k$ が互いに素ならば、任意の整数 $a_1, a_2, ..., a_k$ に対して、次の連立合同方程式を満たす整数 $x$ が $n_1 n_2 \cdots{} n_k$ を法として一意的に存在する。
 
     $$
-    \begin{align}
+    \begin{aligned}
       x &\equiv a_1 \pmod{n_1} \\
       x &\equiv a_2 \pmod{n_2} \\
         &\;\;\vdots \\
       x &\equiv a_k \pmod{n_k}
-    \end{align}
+    \end{aligned}
     $$
 
     唯一の解 $x$ は、$1 \le i \le k$ について $$b_i = N / n_i, \; b_i' = b_i^{-1} \pmod{n_i}$$ とおくと、次の式で求めることができる。
@@ -85,11 +86,11 @@ def chinese_remainder(a, n):
 つまり、次の連立合同方程式を解いてみます。
 
 $$
-\begin{align}
+\begin{aligned}
   x &\equiv 2 \pmod{3} \\
   x &\equiv 3 \pmod{5} \\
   x &\equiv 2 \pmod{7}
-\end{align}
+\end{aligned}
 $$
 
 先ほどのプログラムを使って計算してみると、解は 23 となります。
