crypto-sec-rel.png: invert arrow

--- a/media/post/tikz/crypto-security/crypto-security-relation.tex
+++ b/media/post/tikz/crypto-security/crypto-security-relation.tex
@@ -62,7 +62,7 @@
     \draw[->, my_arrow] (IND-CPA) -- (OW-CPA);
     \draw[->, my_arrow] (NM-CPA) -- (IND-CPA);
     \draw[->, my_arrow] (OW-CCA1) -- (OW-CPA);
-    \draw[->, my_arrow] (OW-CCA1) -- (IND-CCA1);
+    \draw[->, my_arrow] (IND-CCA1) -- (OW-CCA1);
     \draw[->, my_arrow] (IND-CCA1) -- (IND-CPA);
     \draw[->, my_arrow] (NM-CCA1) -- (IND-CCA1);
     \draw[->, my_arrow] (NM-CCA1) -- (NM-CPA);
