--- a/media/post/tikz/crypto-security/crypto-security-relation.tex
+++ b/media/post/tikz/crypto-security/crypto-security-relation.tex
@@ -1,5 +1,5 @@
 
-\documentclass[dvipdfmx]{standalone}
+\documentclass[dvipdfmx, tikz]{standalone}
 \usepackage[T1]{fontenc}
 \usepackage{newtxtext, newtxmath}
 
