--- a/media/post/tikz/group-ring-field/props-of-groups-rings-and-fields.tex
+++ b/media/post/tikz/group-ring-field/props-of-groups-rings-and-fields.tex
@@ -1,5 +1,5 @@
 
-\documentclass[dvipdfmx]{standalone}
+\documentclass[dvipdfmx, tikz]{standalone}
 \usepackage{plext}
 \usepackage[T1]{fontenc}
 \usepackage{newtxtext, newtxmath}
