improve page speed

--- a/_posts/blog/2016-01-01-Features.md
+++ b/_posts/blog/2016-01-01-Features.md
@@ -7,6 +7,7 @@ tags:      Jekyll Theme GitHub Installation
 category:  Blog
 sitemap:   false
 draft:     true
+photoswipe: true
 ---
 The features described in this section are specific for this template. All other language features can be found in the [kramdown documentation](http://kramdown.gettalong.org/syntax.html).
 
