--- a/_posts/blog/2016-01-01-Readme.md
+++ b/_posts/blog/2016-01-01-Readme.md
@@ -7,6 +7,7 @@ tags:      Jekyll Theme GitHub Installation
 category:  Blog
 sitemap:   false
 draft:     true
+photoswipe: true
 ---
 
 This is a blog template for a static site generator named [Jekyll](https://jekyllrb.com/docs/home/) based on a [Ghost](https://ghost.org) template named [Decent](https://github.com/serenader2014/decent).
