--- a/_posts/crypto/2018-12-01-invmod.md
+++ b/_posts/crypto/2018-12-01-invmod.md
@@ -9,6 +9,7 @@ redirect_from:
 comments:      true
 published:     true
 latex:         true
+photoswipe:    true
 ---
 
 内容は剰余の乗法の逆元（モジュラ逆数）についてです。
