--- a/_posts/crypto/2019-05-17-chacha20poly1305.md
+++ b/_posts/crypto/2019-05-17-chacha20poly1305.md
@@ -9,6 +9,7 @@ redirect_from:
 comments:      true
 published:     true
 latex:         true
+photoswipe:    true
 ---
 
 ChaCha20-Poly1305というAEAD暗号について、内部のアルゴリズムやPythonによる実装などを説明していきたいと思います。
