--- a/_posts/python/2020-01-14-tf-idf.md
+++ b/_posts/python/2020-01-14-tf-idf.md
@@ -120,12 +120,12 @@ doc_id: 2
 tf-idf を計算すると、次のようになります。
 
 $$
-\begin{align}
+\begin{aligned}
 \text{tf-idf}(``\text{ドキュメント''}, \text{文書}_1)
 &= \text{tf} \times \text{idf} \\
 &= 2 \times \log \frac{3}{2} \\
 &= 0.352
-\end{align}
+\end{aligned}
 $$
 
 しかし、scikit-learn で出した値と一致しません。
