--- a/media/post/tikz/chacha20poly1305/chacha20-quarter-round.tex
+++ b/media/post/tikz/chacha20poly1305/chacha20-quarter-round.tex
@@ -1,4 +1,4 @@
-\documentclass[dvipdfmx]{standalone}
+\documentclass[dvipdfmx, tikz]{standalone}
 \usepackage{plext}
 \usepackage[T1]{fontenc}
 \usepackage{newtxtext, newtxmath}
