--- a/_posts/vb.net/2020-05-21-string.md
+++ b/_posts/vb.net/2020-05-21-string.md
@@ -56,7 +56,7 @@ Console.WriteLine(s1(2))              ' => c
 Console.WriteLine(s1.Substring(1, 3)) ' => bcd
 ```
 
-#### 文字列が空か判定
+#### 文字列が空か判定 (IsNullOrEmpty)
 
 ```vb.net
 Dim s1 As String = Nothing
