--- a/_posts/java/2020-07-24-string.md
+++ b/_posts/java/2020-07-24-string.md
@@ -38,7 +38,7 @@ System.out.println(String.join(",", elements)); // => abc,def,ghi
 
 ```java
 String str = "    abc\n\t  ";
-System.out.println(str.trim());
+System.out.println(str.trim()); // => abc
 ```
 
 #### 部分文字列 (substring)
@@ -101,7 +101,7 @@ System.out.println(input1.compareTo(input3)); // => 0
 StringBuilder sb = new StringBuilder();
 sb.append("hello, ");
 sb.append("world!");
-System.out.println(sb);
+System.out.println(sb); // => hello, world!
 ```
 
 #### エンコーディング
@@ -109,16 +109,16 @@ System.out.println(sb);
 ```java
 String str = "こんにちは";
 try {
-  byte[] bytes = str.getBytes("SJIS");
-  System.out.println(Arrays.toString(bytes));
-  // => [-126, -79, -126, -15, -126, -55, -126, -65, -126, -51]
-  
-  String newstr = new String(bytes, "SJIS");
-  System.out.println(newstr);
-  // => こんにちは
-  
+    byte[] bytes = str.getBytes("SJIS");
+    System.out.println(Arrays.toString(bytes));
+    // => [-126, -79, -126, -15, -126, -55, -126, -65, -126, -51]
+    
+    String newstr = new String(bytes, "SJIS");
+    System.out.println(newstr);
+    // => こんにちは
+
 } catch (UnsupportedEncodingException e) {
-  e.printStackTrace();
+    e.printStackTrace();
 }
 ```
 
@@ -128,4 +128,24 @@ try {
 String pattern = "\\d{3}-\\d{4}";
 System.out.println("123-4321".matches(pattern));  // => true
 System.out.println("345-67890".matches(pattern)); // => false
+```
+
+#### 正規表現で検索とグルーピング
+
+```java
+String input = "038-123-4567";
+Pattern pattern = Pattern.compile("(\\d{3})-(\\d{3})-(\\d{4})");
+Matcher m = pattern.matcher(input);
+if (m.find()) {
+    System.out.println(m.group(1)); // => 038
+    System.out.println(m.group(2)); // => 123
+    System.out.println(m.group(3)); // => 4567
+}
+```
+
+#### 正規表現で置換
+
+```java
+String input = "<1>2<3>4";
+System.out.println(input.replaceAll("<(\\d)>", "{$1}")); // => {1}2{3}4
 ```
