--- a/_posts/java/2020-07-27-db.md
+++ b/_posts/java/2020-07-27-db.md
@@ -17,7 +17,7 @@ syntaxhighlight: true
 JavaでDBと接続してSQLを発行する方法
 
 ここではMySQLに登録したデータを抽出する例を示します。
-事前に用意するテーブルとデータを作るSQLは以下の通りです。
+事前に用意するテーブルとデータを作るSQLを以下に示します。
 
 ```sql
 drop table fruits;
@@ -92,7 +92,7 @@ mysql> select * from fruits;
 +----+--------+-------+
 ```
 
-#### トランザクションのコミットとロールバック
+#### トランザクションのコミットとロールバック (commit, rollback)
 
 insert時に意図的に主キーが重複する値を指定してロールバックを発生させる例：
 
