--- a/_posts/misc/2019-08-18-seccamp2019.md
+++ b/_posts/misc/2019-08-18-seccamp2019.md
@@ -8,6 +8,7 @@ cover:         /assets/cover1.jpg
 redirect_from:
 comments:      true
 published:     true
+latex:         true
 ---
 
 セキュリティ・キャンプ全国大会2019では初めてチュータとして参加させて頂いたので、チュータ業務はどんな感じなのかという話と、私の記憶がある限りの全ての出来事をここに書いていこうと思います。
