--- a/_posts/crypto/2020-12-09-DLP.md
+++ b/_posts/crypto/2020-12-09-DLP.md
@@ -1,6 +1,7 @@
 ---
 layout:        post
 title:         "離散対数問題に対する攻撃手法 (Python & SageMath)"
+menutitle:     "離散対数問題に対する攻撃手法 (Adv.Cal. 2020)"
 date:          2020-12-09
 category:      Crypto
 cover:         /assets/cover4.jpg
