--- a/_posts/crypto/2020-12-10-ECDLP.md
+++ b/_posts/crypto/2020-12-10-ECDLP.md
@@ -1,6 +1,7 @@
 ---
 layout:        post
 title:         "楕円曲線上の離散対数問題に対する攻撃手法 (SageMath)"
+menutitle:     "楕円曲線上の離散対数問題に対する攻撃手法 (Adv.Cal. 2020)"
 date:          2020-12-10
 category:      Crypto
 cover:         /assets/cover4.jpg
