--- a/_posts/protocol/2021-01-11-oids.md
+++ b/_posts/protocol/2021-01-11-oids.md
@@ -14,7 +14,7 @@ syntaxhighlight: true
 # feed:    false
 ---
 
-オブジェクトID (OID) のドット表記とDER形式のバイト列の規則について説明します。
+オブジェクトID (OID) のドット表記とDER形式のバイト列の変換規則について説明します。
 OIDはオブジェクト識別子のことですが、X.509証明書をDER形式で読み書きするときは、ドット表記ではなくバイト列による表記を使います。
 OIDはドット区切りで、例えば「1.2.3.4.16」をバイト列に変換すると「01 02 03 04 10」のように16進数表記になります。とても簡単です。
 ただし、表記にあたって次の2つの特殊ルールが優先して適用されます。
@@ -171,6 +171,20 @@ OIDの場合は、Tag が 0x06 となり、上記の例をANS.1で表すと「06
 | brainpoolP384r1 | 1.3.36.3.3.2.8.1.1.11 | 2B 24 03 03 02 08 01 01 0B
 | brainpoolP512r1 | 1.3.36.3.3.2.8.1.1.13 | 2B 24 03 03 02 08 01 01 0D
 
+
+<br>
+
+### OIDの割り当て規則
+
+OIDを構成する10進数のうち、最初の2つについては、次のように割り当て規則があります。
+
+| 1つ目 | 2つ目
+|---+---
+| `0`: ITU-T が規定 | `0`: 勧告(recommendation)<br>`1`: 課題(question)<br>`2`: 管理組織(administration)<br>`3`: ネットワークオペレータ
+| `1`: ISO が規定 | `0`: 標準 (standard)<br>`1`: 登録機関 (registration-authority)<br>`2`: 加盟団体 (member-body)<br>`3`: 身元が明らかな組織 (identified-organization)
+| `2`: ITU-T と ISO が規定
+
+例えば、OID の先頭が 1.2 のオブジェクトは、ISO の加盟団体によって管理されていることになります。
 
 <br>
 
