update post, powershell/which

--- a/_posts/powershell/2021-01-23-which.md
+++ b/_posts/powershell/2021-01-23-which.md
@@ -105,9 +105,11 @@ C:\Windows\system32\notepad.exe
 
 ```powershell
 function which($cmdname) {
-  Get-Command $cmdname | Select-Object -ExpandProperty Definition
+  Get-Command $cmdname -ErrorAction SilentlyContinue | Select-Object -ExpandProperty Definition
 }
 ```
+
+指定したコマンドが存在しない場合はエラーを表示しないように -ErrorAction SilentlyContinue を加えて実際のwhichコマンドと同じになるようにしています。
 
 which関数の使い方は以下の通りです。なお、which関数自身の詳細も表示できます。
 
@@ -119,7 +121,7 @@ C:\Windows\system32\notepad.exe
 PS> which which
 param($cmdname)
 
-  Get-Command $cmdname | Select-Object -ExpandProperty Definition
+  Get-Command $cmdname -ErrorAction SilentlyContinue | Select-Object -ExpandProperty Definition
 
 ```
 
