--- a/_posts/crypto/2018-12-01-invmod.md
+++ b/_posts/crypto/2018-12-01-invmod.md
@@ -323,7 +323,7 @@ RSA暗号のアルゴリズムは次のように定義されています。
     \tag{3.2}
     $$
 
-赤字にした部分ですが、鍵生成のところで $$ed \equiv 1 \pmod{\varphi(N)}$$ と書かれているのは $$e \equiv d^{-1} \pmod{\varphi(N)}$$ と同じ式です。
+鍵生成のところで $$ed \equiv 1 \pmod{\varphi(N)}$$ と書かれているのは $$e \equiv d^{-1} \pmod{\varphi(N)}$$ と同じ式です。
 $\varphi(N)$ とはオイラーの関数で、$1$ から $N$ までの自然数のうち $N$ と互いに素なものの個数を返す関数のことです。例えば、$N$ が素数なら $1$ から $N-1$ までの自然数の全てと互いに素なので、$\varphi(N) = N-1$となります。また、オイラーの関数は互いに素な数の積に関して乗法的であるので、$N$ が二つの素数の合成数 $N = pq$ の場合は $\varphi(N) = (p-1)(q-1)$ が成り立ちます。
 
 RSA暗号の安全性は素因数分解の困難性に依拠しています。「依拠する」とは暗号の解読それらの問題の困難さとの間に厳密な等価性が成り立つという意味ではなく、ただ頼っているという意味です。
@@ -361,7 +361,7 @@ $r = 0$ のときは明らかに $a$ と $b$ の最大公約数 $\gcd(a,b)$ は 
 $r \ne 0$ のときは $r = a - bq$ と表せるので、$\gcd(a,b)$ は $r$ の約数です。なので $\gcd(b,r) \le \gcd(a,b)$ となります。
 一方、$a = bq + r$ と表されるから、$a$ は $\gcd(b,r)$ の約数です。なので $\gcd(b,r) \ge \gcd(a, b)$ となります。
 したがって、$\gcd(b,r) = \gcd(a,b)$ となるので、$\gcd(b,r)$ を求めることは $\gcd(a,b)$ を求めることと同じということになります。
-$(a,b)$ よりも $(b,r)$ の方が小さい整数の組なので、当然 $\gcd(a,b)$ よりも $\gcd(b,r)$ を求める方が簡単です。（説明端折りますが）この処理を繰り返していって $r = 0$ となったときの $b$ が求めるべき最大公約数となります。
+$(a,b)$ よりも $(b,r)$ の方が小さい整数の組なので、当然 $\gcd(a,b)$ よりも $\gcd(b,r)$ を求める方が簡単です。説明を端折りますが、この処理を繰り返していって $r = 0$ となったときの $b$ が求めるべき最大公約数となります。
 最大公約数を求めるプログラムをPythonで書くと下のようになります。
 
 ```python
