update post, keyboard/xmodmap

--- a/_posts/keyboard/2021-07-05-xmodmap.md
+++ b/_posts/keyboard/2021-07-05-xmodmap.md
@@ -95,3 +95,15 @@ sudo systemctl start rc-local.service
 sudo systemctl enable rc-local.service
 ```
 -->
+
+
+#### 補足
+
+MacのParallelsのKali Linuxでは日本語キーボードで「\~」「\`」「_」「\\」「\|」に対応させるために以下の設定を使いました。
+
+```
+keycode  21 = asciicircum asciitilde
+keycode  34 = at grave
+keycode  97 = underscore underscore
+keycode 132 = backslash bar
+```
