fix typo: ANS.1 => ASN.1

--- a/_posts/protocol/2021-01-11-oids.md
+++ b/_posts/protocol/2021-01-11-oids.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "ANS.1 でのオブジェクトID (OID) とバイト列の表記"
+title:         "ASN.1 でのオブジェクトID (OID) とバイト列の表記"
 date:          2021-01-11
 category:      Protocol
 cover:         /assets/cover5.jpg
@@ -71,8 +71,8 @@ byte2str_OID(b'\x2A\x86\x48\x86\xF7\x0D\x02\x05')
 str2byte_OID('1.2.840.113549.2.5').hex()
 ```
 
-実際にANS.1で使用する場合は、Tag-Length-Valueの形式で表され、
-OIDの場合は、Tag が 0x06 となり、上記の例をANS.1で表すと「06 08 2A 86 48 86 F7 0D 02 05」のように先頭の2バイトが新たに追加されることに注意が必要です。
+実際にASN.1で使用する場合は、Tag-Length-Valueの形式で表され、
+OIDの場合は、Tag が 0x06 となり、上記の例をASN.1で表すと「06 08 2A 86 48 86 F7 0D 02 05」のように先頭の2バイトが新たに追加されることに注意が必要です。
 
 
 以下ではよく使う（と思われる）OIDとそのバイト列の一覧です。
