--- a/_posts/protocol/2021-01-17-asn1-tags.md
+++ b/_posts/protocol/2021-01-17-asn1-tags.md
@@ -1,10 +1,10 @@
 ---
 layout:        post
-title:         "ANS.1 のタグ一覧"
+title:         "ASN.1 のタグ一覧"
 date:          2021-01-17
 category:      Protocol
 cover:         /assets/cover5.jpg
-redirect_from:
+redirect_from: /protocol/ans1-tags
 comments:      true
 published:     true
 latex:         false
