--- a/_posts/shell/2017-07-08-ttf-to-png.md
+++ b/_posts/shell/2017-07-08-ttf-to-png.md
@@ -2,10 +2,10 @@
 layout:        post
 title:         "Convert ttf to png"
 date:          2017-07-08
-category:      Misc
+category:      Shell
 author:        tex2e
 cover:         /assets/cover1.jpg
-redirect_from:
+redirect_from: /misc/ttf-to-png
 comments:      true
 published:     true
 ---
